--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: Path-Resource
-version: 0.01_2
+version: 0.03
 author:
   - 'Robert Krimen <robertkrimen@gmail.com>'
 abstract: URI/Path::Class combination.
@@ -10,17 +10,18 @@ resources:
 requires:
   Class::Accessor: 0
   Path::Class: 0
+  Path::Lite: 0
+  Scalar::Util: 0
   URI: 0
-  URI::URL: 0
 build_requires:
   Test::More: 0
 provides:
-  Archie::Path::Resource:
-    file: lib/Path/Resource.pm
   Path::Resource:
     file: lib/Path/Resource.pm
-    version: 0.01_2
-generated_by: Module::Build version 0.28
+    version: 0.03
+  Path::Resource::Base:
+    file: lib/Path/Resource/Base.pm
+generated_by: Module::Build version 0.2808
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
   version: 1.2
