--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: Path-Resource
-version: 0.03
+version: 0.04
 author:
   - 'Robert Krimen <robertkrimen@gmail.com>'
 abstract: URI/Path::Class combination.
@@ -9,8 +9,8 @@ resources:
   license: http://dev.perl.org/licenses/
 requires:
   Class::Accessor: 0
+  Path::Abstract: 0
   Path::Class: 0
-  Path::Lite: 0
   Scalar::Util: 0
   URI: 0
 build_requires:
@@ -18,7 +18,7 @@ build_requires:
 provides:
   Path::Resource:
     file: lib/Path/Resource.pm
-    version: 0.03
+    version: 0.04
   Path::Resource::Base:
     file: lib/Path/Resource/Base.pm
 generated_by: Module::Build version 0.2808
