Import of RKRIMEN/Path-Resource-0.042 from CPAN.
gitpan-cpan-distribution: Path-Resource
gitpan-cpan-version:      0.042
gitpan-cpan-path:         RKRIMEN/Path-Resource-0.042.tar.gz
gitpan-cpan-author:       RKRIMEN
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: Path-Resource
-version: 0.041
+version: 0.042
 author:
   - 'Robert Krimen <robertkrimen@gmail.com>'
 abstract: URI/Path::Class combination.
@@ -9,17 +9,19 @@ resources:
   license: http://dev.perl.org/licenses/
 requires:
   Class::Accessor: 0
+  JSON::XS: 0
   Path::Abstract: 0
   Path::Class: 0
   Scalar::Util: 0
   URI: 0
 build_requires:
-  Test::Lazy: 0
+  JSON::XS: 0
+  Test::Lazy: 0.03
   Test::More: 0
 provides:
   Path::Resource:
     file: lib/Path/Resource.pm
-    version: 0.041
+    version: 0.042
   Path::Resource::Base:
     file: lib/Path/Resource/Base.pm
 generated_by: Module::Build version 0.2808
