--- a/META.yml
+++ b/META.yml
@@ -1,30 +1,28 @@
 ---
 name: Path-Resource
-version: 0.06
+version: 0.070
 author:
-  - 'Robert Krimen <robertkrimen@gmail.com>'
+  - 'Robert Krimen <rkrimen@cpan.org>'
 abstract: URI/Path::Class combination.
 license: perl
 resources:
   license: http://dev.perl.org/licenses/
 requires:
   Class::Accessor::Fast: 0
-  JSON::XS: 0
   Path::Abstract: 0
   Path::Class: 0
   Scalar::Util: 0
   URI: 0
 build_requires:
-  JSON::XS: 0
   Test::Lazy: 0.03
   Test::More: 0
 provides:
   Path::Resource:
     file: lib/Path/Resource.pm
-    version: 0.06
+    version: 0.070
   Path::Resource::Base:
     file: lib/Path/Resource/Base.pm
-generated_by: Module::Build version 0.2806
+generated_by: Module::Build version 0.2808
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
   version: 1.2
