Import of RKRIMEN/Path-Resource-0.072 from CPAN.
gitpan-cpan-distribution: Path-Resource
gitpan-cpan-version:      0.072
gitpan-cpan-path:         RKRIMEN/Path-Resource-0.072.tar.gz
gitpan-cpan-author:       RKRIMEN
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
 ---
-abstract: 'URI/Path::Class combination.'
+abstract: 'URI/Path::Class combination'
 author:
   - 'Robert Krimen <rkrimen@cpan.org>'
 build_requires:
@@ -24,4 +24,4 @@ requires:
 resources:
   license: http://dev.perl.org/licenses/
   repository: http://github.com/robertkrimen/path-resource/tree/master
-version: 0.071
+version: 0.072
